// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@lad-tech/mobydick-core/ActionSheetBase should renders correctly Item 1`] = `
<View
  accessibilityLabel="actionSheetsItem"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 18,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 45,
        "marginHorizontal": 12,
        "minHeight": 75,
        "paddingHorizontal": 30,
      },
      {
        "backgroundColor": "#FFF",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#2B78EE",
            "fontFamily": "Inter-Medium",
            "fontSize": 24,
            "lineHeight": 30,
            "minHeight": 30,
          },
          {
            "paddingVertical": 22.5,
          },
        ]
      }
    >
      title
    </Text>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/ActionSheetBase should renders correctly Item with  textFont 1`] = `
<View
  accessibilityLabel="actionSheetsItem"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderTopLeftRadius": 18,
        "borderTopRightRadius": 18,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginHorizontal": 12,
        "minHeight": 75,
        "paddingHorizontal": 30,
      },
      {
        "backgroundColor": "#FFF",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#FFF",
            "fontFamily": "Inter-Regular",
            "fontSize": 22.5,
            "lineHeight": 28.5,
            "minHeight": 28.5,
          },
          {
            "paddingVertical": 22.5,
          },
        ]
      }
    >
      title
    </Text>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/ActionSheetBase should renders correctly Item with !selected 1`] = `
<View
  accessibilityLabel="actionSheetsItem"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderBottomLeftRadius": 18,
        "borderBottomRightRadius": 18,
        "borderTopColor": "#D1D4DB",
        "borderTopWidth": 1.5,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 12,
        "marginHorizontal": 12,
        "minHeight": 75,
        "paddingHorizontal": 30,
      },
      {
        "backgroundColor": "#FFF",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#FFF",
            "fontFamily": "Inter-Regular",
            "fontSize": 22.5,
            "lineHeight": 28.5,
            "minHeight": 28.5,
          },
          {
            "paddingVertical": 22.5,
          },
        ]
      }
    >
      title
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    needsOffscreenAlphaCompositing={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flexDirection": "row",
          "opacity": 1,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "aspectRatio": 1,
          "backgroundColor": "transparent",
          "borderColor": "rgba(32, 36, 45, 0.3)",
          "borderRadius": 16.5,
          "borderWidth": 3,
          "justifyContent": "center",
          "width": 33,
        }
      }
      value="title"
    />
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/ActionSheetBase should renders correctly Item with disabled 1`] = `
<View
  accessibilityLabel="actionSheetsItem"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 18,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 45,
        "marginHorizontal": 12,
        "minHeight": 75,
        "paddingHorizontal": 30,
      },
      {
        "backgroundColor": "#FFF",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#9BA1B0",
            "fontFamily": "Inter-Medium",
            "fontSize": 24,
            "lineHeight": 30,
            "minHeight": 30,
          },
          {
            "paddingVertical": 22.5,
          },
        ]
      }
    >
      title
    </Text>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/ActionSheetBase should renders correctly Item with leftIcon 1`] = `
<View
  accessibilityLabel="actionSheetsItem"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 18,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 45,
        "marginHorizontal": 12,
        "minHeight": 75,
        "paddingHorizontal": 30,
      },
      {
        "backgroundColor": "#EEEFF1",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <View
      style={
        {
          "paddingRight": 18,
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          {
            "color": "#5E6678",
            "fontFamily": "Neotis",
            "fontSize": 36,
          }
        }
      >
        
      </Text>
    </View>
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#2B78EE",
            "fontFamily": "Inter-Medium",
            "fontSize": 24,
            "lineHeight": 30,
            "minHeight": 30,
          },
          {
            "paddingVertical": 22.5,
          },
        ]
      }
    >
      title
    </Text>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/ActionSheetBase should renders correctly Item with selected 1`] = `
<View
  accessibilityLabel="actionSheetsItem"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 18,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 12,
        "marginHorizontal": 12,
        "minHeight": 75,
        "paddingHorizontal": 30,
      },
      {
        "backgroundColor": "#FFF",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 24,
            "lineHeight": 30,
            "minHeight": 30,
          },
          {
            "paddingVertical": 22.5,
          },
        ]
      }
    >
      title
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flexDirection": "row",
          "maxWidth": "100%",
          "opacity": 1,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "borderColor": "rgba(32, 36, 45, 0.3)",
          "borderRadius": 6,
          "borderWidth": 0,
          "height": 30,
          "width": 30,
        }
      }
      value="title"
    >
      <SvgMock
        fill="#2B78EE"
        height={30}
        width={30}
      />
    </View>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/ActionSheetBase should renders correctly inner item 1`] = `
<View
  accessibilityLabel="actionSheetsItem"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderTopColor": "#D1D4DB",
        "borderTopWidth": 1.5,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginHorizontal": 12,
        "minHeight": 75,
        "paddingHorizontal": 30,
      },
      {
        "backgroundColor": "#FFF",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#FFF",
            "fontFamily": "Inter-Regular",
            "fontSize": 22.5,
            "lineHeight": 28.5,
            "minHeight": 28.5,
          },
          {
            "paddingVertical": 22.5,
          },
        ]
      }
    >
      title
    </Text>
  </View>
</View>
`;
